AUT-3485: Use MFA method create request and response objects
- Created MfaMethodCreateRequest object
-- Added deserializer to know which MFADetail implementation to use when reading json
- Return already existing MfaMethodData response object

Co-authored-by: Becka Lelew <becka.lelew@digital.cabinet-office.gov.uk>