@@ -15,34 +15,69 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static uk.gov.di.authentication.sharedtest.matchers.APIGatewayProxyResponseEventMatcher.hasJsonBody;
 
 class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegrationTest {
+    private static final String TEST_EMAIL = "test@email.com";
+    private static final String TEST_PASSWORD = "test-password";
+    private static final String TEST_CREDENTIAL = "ZZ11BB22CC33DD44EE55FF66GG77HH88II99JJ00";
+    private static String TEST_PUBLIC_SUBJECT;
 
     @BeforeEach
     void setUp() {
         handler = new MFAMethodsCreateHandler(TEST_CONFIGURATION_SERVICE);
+        userStore.signUp(TEST_EMAIL, TEST_PASSWORD);
+        TEST_PUBLIC_SUBJECT =
+                userStore.getUserProfileFromEmail(TEST_EMAIL).get().getPublicSubjectID();
     }
 
     @Test
-    void shouldReturn200AndHelloWorld() {
+    void shouldReturn200AndMfaMethodData() {
         var response =
                 makeRequest(
-                        Optional.of("{\"mfaMethod\": \"Hello World\"}"),
+                        Optional.of(
+                                "{\n"
+                                        + "\"mfaMethod\": {\n"
+                                        + "\"priorityIdentifier\": \"BACKUP\",\n"
+                                        + "\"method\": {\n"
+                                        + "\"mfaMethodType\": \"AUTH_APP\",\n"
+                                        + "\"credential\": \"AAAABBBBCCCCCDDDDD55551111EEEE2222FFFF3333GGGG4444\"\n"
+                                        + "}\n"
+                                        + "}\n"
+                                        + "}"),
                         Collections.emptyMap(),
                         Collections.emptyMap(),
-                        Map.of("publicSubjectId", "helloPath"),
+                        Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
                         Collections.emptyMap());
 
         assertEquals(200, response.getStatusCode());
-        assertEquals("{\"mfaMethod\": \"Hello World\"}", response.getBody());
+        assertEquals(
+                "{"
+                        + "\"mfaIdentifier\":2,"
+                        + "\"priorityIdentifier\":\"BACKUP\","
+                        + "\"methodVerified\":true,"
+                        + "\"method\":{"
+                        + "\"mfaMethodType\":\"AUTH_APP\","
+                        + "\"credential\":\"AAAABBBBCCCCCDDDDD55551111EEEE2222FFFF3333GGGG4444\""
+                        + "}"
+                        + "}",
+                response.getBody());
     }
 
     @Test
-    void shouldReturn400AndBadRequestWhenPathParameterIsWrong() {
+    void shouldReturn400AndBadRequestWhenPathParameterIsNotPresent() {
         var response =
                 makeRequest(
-                        Optional.of("{\"mfaMethod\": \"Hello World\"}"),
+                        Optional.of(
+                                "{\n"
+                                        + "\"mfaMethod\": {\n"
+                                        + "\"priorityIdentifier\": \"BACKUP\",\n"
+                                        + "\"method\": {\n"
+                                        + "\"mfaMethodType\": \"AUTH_APP\",\n"
+                                        + "\"credential\": \"AAAABBBBCCCCCDDDDD55551111EEEE2222FFFF3333GGGG4444\"\n"
+                                        + "}\n"
+                                        + "}\n"
+                                        + "}"),
                         Collections.emptyMap(),
                         Collections.emptyMap(),
-                        Map.of("publicSubjectId", "wrongPath"),
+                        Collections.emptyMap(),
                         Collections.emptyMap());
 
         assertEquals(400, response.getStatusCode());
